--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Build and push master
 
 env:
   IMAGE: swagger-brake
-  IMAGE_BASE: docker.pkg.github.com/${{ github.repository }}/${{ swagger-brake }}
+  REGISTRY: docker.pkg.github.com
 
 on:
   push:
@@ -16,8 +16,10 @@ jobs:
       - name: Checkout code 
         uses: actions/checkout@v2
       
-      - name: Build container
-        run: | 
-        docker build -t $IMAGE -t --tag $IMAGE_BASE:latest .
-        docker login docker.pkg.github.com -u ${GITHUB_REPOSITORY} -p ${{ secrets.GITHUB_TOKEN }}
-        docker push $IMAGE_BASE
+      - name: Publish to Registry
+        uses: elgohr/Publish-Docker-Github-Action@master
+        with:
+          name: ${{ github.repository }}/${{IMAGE}}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: ${{REGISTRY}}
